--- a/uranai.html
+++ b/uranai.html
@@ -43,7 +43,7 @@
       </div>
     </fieldset>
     <div>
-      <button type="submit">送信</button>
+      <button type="submit">占う</button>
     </div>
   </form>
   <br /> Result:
