--- a/index.html
+++ b/index.html
@@ -38,52 +38,53 @@
   </h3>
   <br />
 
-  <h2>
+  <h3>
     京都大学
     <pre>&lt;br /&gt;</pre> 同好会の推奨する br タグ
-  </h2>
-
-  <h3>
-    <pre>&lt;br&gt;</pre> と
-    <pre>&lt;br /&gt;</pre>
   </h3>
 
   京都大学
   <pre>&lt;br /&gt;</pre> 同好会では
   <pre>&lt;br /&gt;</pre> の使用を推奨しています。
+  <a href="https://www.w3.org/TR/html5/syntax.html#start-tags">HTML5 でも、
+    <pre>&lt;br /&gt;</pre> は使用できます</a>。
   <br />
-  <ul>
-    <li>
-      <a href="https://www.w3.org/TR/xhtml1/#h-4.6">
-        <pre>&lt;br&gt;</pre> は XHTML1.1 では許容されません</a>。
-    </li>
-    <li>
-      <a href="https://www.w3.org/TR/html5/syntax.html#start-tags">HTML5 でも、
-        <pre>&lt;br /&gt;</pre> は使用できます</a>。
-    </li>
-  </ul>
 
   <h3>
-    <pre>&lt;br/&gt;</pre>
+    その他の br タグ
   </h3>
+
+  <h4>
+    <pre>&lt;br&gt;</pre>
+  </h4>
+
+  <a href="https://www.w3.org/TR/xhtml1/#h-4.6">
+    <pre>&lt;br&gt;</pre> は XHTML1.1 では許容されません</a>。
+  <pre>&lt;br /&gt;</pre> を推奨します。
+  <br />
+
+
+  <h4>
+    <pre>&lt;br/&gt;</pre>
+  </h4>
 
   古いブラウザとの互換性のため、
   <pre>&lt;br /&gt;</pre> を推奨します。
   <a href="https://www.w3.org/TR/xhtml1/#C_2">これは XHTML1.1 でも言及されています</a>。
   <br />
 
-  <h3>
+  <h4>
     <pre>&lt;br&gt;&lt;/br&gt;</pre>
-  </h3>
+  </h4>
 
   XHTML1.1 では有効ですが、
   <a href="https://www.w3.org/TR/html5/syntax.html#void-elements">HTML5 では許容されません</a>。
   <pre>&lt;br /&gt;</pre> を推奨します。
   <br />
 
-  <h3>
+  <h4>
     <pre>&lt;br  /&gt;</pre>
-  </h3>
+  </h4>
   不要なスペースは削りましょう。
   <pre>&lt;br /&gt;</pre> を推奨します。
   <br />
