Replace `pre` elements to `code` elements
The `pre` element represents a block of preformatted text.
In those cases, `code` elements are appropriate.

--- a/uranai.html
+++ b/uranai.html
@@ -11,8 +11,8 @@
 <body>
   <h1>
     京都大学
-    <pre>&lt;br /&gt;</pre> 同好会
-    <pre>&lt;br /&gt;</pre> 占い
+    <code>&lt;br /&gt;</code> 同好会
+    <code>&lt;br /&gt;</code> 占い
   </h1>
 
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
