--- a/validator.html
+++ b/validator.html
@@ -11,8 +11,8 @@
 <body>
   <h1>
     京都大学
-    <code>&lt;br /&gt;</code> 同好会
-    <code>&lt;br /&gt;</code> バリデータ
+    <code class="pre">&lt;br /&gt;</code> 同好会
+    <code class="pre">&lt;br /&gt;</code> バリデータ
   </h1>
 
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
