Add alt atrribute for logo image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     京都大学
     <code class="pre">&lt;br /&gt;</code> 同好会とは
   </h2>
-  <img src="./logo.png" />
+  <img src="./logo.png" alt="K&lt;br /&gt; Logo" />
   <br /> 京都大学
   <code class="pre">&lt;br /&gt;</code> 同好会は
   <code class="pre">&lt;br /&gt;</code> が好きな人間が集まる同好会です。
