--- a/validator.html
+++ b/validator.html
@@ -16,7 +16,7 @@
   </h1>
 
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a>
-  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script async src="https://platform.twitter.com/widgets.js"></script>
   <br />
 
   <textarea id="text" style="width:400px;height:200px"></textarea>
