type attribute is not needed in script tag with JavaScript.

--- a/uranai.html
+++ b/uranai.html
@@ -39,7 +39,7 @@
 
       <div>
         <input type="radio" id="br-noclose" name="br">
-        <label for="br-no-close">&lt;br&gt;</label>
+        <label for="br-noclose">&lt;br&gt;</label>
       </div>
     </fieldset>
     <br />
@@ -53,7 +53,7 @@
   <br />
   <br />
 
-  <script type="text/javascript" src="./uranai.js"></script>
+  <script src="./uranai.js"></script>
 </body>
 
 </html>
