--- a/validator.html
+++ b/validator.html
@@ -28,7 +28,7 @@
   <br />
   <br />
 
-  <script type="text/javascript" src="./validator.js"></script>
+  <script src="./validator.js"></script>
 </body>
 
 </html>
