Add notice about <BR>

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
   <code class="pre">&lt;br /&gt;</code> を推奨します。
   <br />
 
-
   <h4>
     <code class="pre">&lt;br/&gt;</code>
   </h4>
@@ -86,6 +85,15 @@
     <code class="pre">&lt;br  /&gt;</code>
   </h4>
   不要なスペースは削りましょう。
+  <code class="pre">&lt;br /&gt;</code> を推奨します。
+  <br />
+
+  <h4>
+    <code class="pre">&lt;BR /&gt;</code>
+  </h4>
+
+  <a href="https://www.w3.org/TR/xhtml1/#h-4.2">
+    <code class="pre">&lt;BR /&gt;</code> （大文字）は XHTML1.1 では許容されません</a>。
   <code class="pre">&lt;br /&gt;</code> を推奨します。
   <br />
 
